parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> PROGRAMA
Rule 1     PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON VARS F PRINCIPAL printTodo
Rule 2     F -> FUNCION F
Rule 3     F -> empty
Rule 4     VARS -> borrarListaVar VAR V1
Rule 5     V1 -> TIPO VARIABLE agregarVarLista V2 SEMICOLON agregarVariables V3
Rule 6     V2 -> COMMA VARIABLE agregarVarLista V2
Rule 7     V2 -> empty
Rule 8     V3 -> borrarListaVar V1
Rule 9     V3 -> empty
Rule 10    FUNCION -> FUNC TIPO_FUNCION NAME agregarFunc LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO
Rule 11    V4 -> VARS
Rule 12    V4 -> empty
Rule 13    PARAMS -> TIPO NAME agregarVarLista P1
Rule 14    P1 -> P2
Rule 15    P1 -> empty
Rule 16    P2 -> COMMA PARAMS P1
Rule 17    CUERPO -> LBRACKET E RBRACKET
Rule 18    E -> E1
Rule 19    E -> empty
Rule 20    E1 -> ESTATUTO
Rule 21    E1 -> ESTATUTO E1
Rule 22    TIPO -> INT
Rule 23    TIPO -> FLOAT
Rule 24    TIPO -> CHAR
Rule 25    TIPO_FUNCION -> INT
Rule 26    TIPO_FUNCION -> FLOAT
Rule 27    TIPO_FUNCION -> CHAR
Rule 28    TIPO_FUNCION -> VOID
Rule 29    PRINCIPAL -> MAIN LPAREN crearFuncMain RPAREN CUERPO
Rule 30    VARIABLE -> NAME E2
Rule 31    E2 -> LSBRACKET EXP RSBRACKET
Rule 32    E2 -> empty
Rule 33    ESTATUTO -> ASIGNACION
Rule 34    ESTATUTO -> LLAMADA
Rule 35    ESTATUTO -> RETORNO
Rule 36    ESTATUTO -> LECTURA
Rule 37    ESTATUTO -> ESCRITURA
Rule 38    ESTATUTO -> CONDICION
Rule 39    ESTATUTO -> CICLO_W
Rule 40    ESTATUTO -> CICLO_F
Rule 41    ASIGNACION -> VARIABLE agregarPilaOp EQUALS meterOperador EXP popIgual SEMICOLON
Rule 42    LLAMADA -> NAME LPAREN E1 RPAREN SEMICOLON
Rule 43    E1 -> EXP
Rule 44    E1 -> EXP COMMA E1
Rule 45    LLAMADAF -> NAME LPAREN E1 RPAREN
Rule 46    RETORNO -> RETURN LPAREN EXP RPAREN SEMICOLON
Rule 47    LECTURA -> READ LPAREN V3 RPAREN SEMICOLON
Rule 48    V3 -> VARIABLE COMMA V3
Rule 49    V3 -> VARIABLE
Rule 50    ESCRITURA -> PRINT LPAREN E2 RPAREN SEMICOLON
Rule 51    E2 -> S_EXP
Rule 52    E2 -> S_EXP COMMA E2
Rule 53    CONDICION -> IF LPAREN H_EXP RPAREN gotoIf THEN CUERPO ELSE1 terminarGoto
Rule 54    ELSE1 -> ELSE gotoElse CUERPO
Rule 55    ELSE1 -> empty
Rule 56    CICLO_W -> WHILE agregarWhile LPAREN H_EXP RPAREN DO gotoIf CUERPO terminarWhile
Rule 57    CICLO_F -> FROM NAME EQUALS C_INT TO C_INT DO CUERPO
Rule 58    H_EXP -> T_EXP
Rule 59    H_EXP -> T_EXP OR H_EXP
Rule 60    T_EXP -> G_EXP
Rule 61    T_EXP -> G_EXP AND T_EXP
Rule 62    G_EXP -> EXP B popBool
Rule 63    B -> GREATER_OR_EQUAL meterOperador G_EXP
Rule 64    B -> LESS_OR_EQUAL meterOperador EXP
Rule 65    B -> GREATER_THAN meterOperador EXP
Rule 66    B -> LESS_THAN meterOperador EXP
Rule 67    B -> IS_EQUAL meterOperador EXP
Rule 68    B -> NOT_EQUAL meterOperador EXP
Rule 69    B -> empty
Rule 70    S_EXP -> C_STRING
Rule 71    S_EXP -> EXP
Rule 72    EXP -> TERMINO T popSumaResta
Rule 73    T -> PLUS meterOperador EXP
Rule 74    T -> MINUS meterOperador EXP
Rule 75    T -> empty
Rule 76    TERMINO -> FACTOR F2 popMultDiv
Rule 77    F2 -> DIVIDE meterOperador TERMINO
Rule 78    F2 -> MULTIPLY meterOperador TERMINO
Rule 79    F2 -> empty
Rule 80    FACTOR -> LPAREN meterFondoFalso H_EXP RPAREN quitarFondoFalso
Rule 81    FACTOR -> C_INT
Rule 82    FACTOR -> C_FLOAT
Rule 83    FACTOR -> C_CHAR
Rule 84    FACTOR -> VARIABLE agregarPilaOp
Rule 85    FACTOR -> LLAMADAF
Rule 86    empty -> <empty>
Rule 87    gotoIf -> <empty>
Rule 88    terminarGoto -> <empty>
Rule 89    agregarWhile -> <empty>
Rule 90    terminarWhile -> <empty>
Rule 91    gotoElse -> <empty>
Rule 92    meterFondoFalso -> <empty>
Rule 93    quitarFondoFalso -> <empty>
Rule 94    agregarPilaOp -> <empty>
Rule 95    popBool -> <empty>
Rule 96    popIgual -> <empty>
Rule 97    popMultDiv -> <empty>
Rule 98    popSumaResta -> <empty>
Rule 99    meterIgual -> <empty>
Rule 100   meterBool -> <empty>
Rule 101   meterMultDiv -> <empty>
Rule 102   meterSumaResta -> <empty>
Rule 103   meterOperador -> <empty>
Rule 104   crearFuncGlobal -> <empty>
Rule 105   crearFuncMain -> <empty>
Rule 106   agregarFunc -> <empty>
Rule 107   agregarVariables -> <empty>
Rule 108   printFunciones -> <empty>
Rule 109   printTodo -> <empty>
Rule 110   agregarVarLista -> <empty>
Rule 111   borrarListaVar -> <empty>

Terminals, with rules where they appear

AND                  : 61
CHAR                 : 24 27
COMMA                : 6 16 44 48 52
C_CHAR               : 83
C_FLOAT              : 82
C_INT                : 57 57 81
C_STRING             : 70
DIVIDE               : 77
DO                   : 56 57
ELSE                 : 54
EQUALS               : 41 57
FLOAT                : 23 26
FROM                 : 57
FUNC                 : 10
GREATER_OR_EQUAL     : 63
GREATER_THAN         : 65
IF                   : 53
INT                  : 22 25
IS_EQUAL             : 67
LBRACKET             : 17
LESS_OR_EQUAL        : 64
LESS_THAN            : 66
LPAREN               : 10 29 42 45 46 47 50 53 56 80
LSBRACKET            : 31
MAIN                 : 29
MINUS                : 74
MULTIPLY             : 78
NAME                 : 1 10 13 30 42 45 57
NOT_EQUAL            : 68
OR                   : 59
PLUS                 : 73
PRINT                : 50
PROGRAM              : 1
RBRACKET             : 17
READ                 : 47
RETURN               : 46
RPAREN               : 10 29 42 45 46 47 50 53 56 80
RSBRACKET            : 31
SEMICOLON            : 1 5 41 42 46 47 50
THEN                 : 53
TO                   : 57
VAR                  : 4
VOID                 : 28
WHILE                : 56
error                : 

Nonterminals, with rules where they appear

ASIGNACION           : 33
B                    : 62
CICLO_F              : 40
CICLO_W              : 39
CONDICION            : 38
CUERPO               : 10 29 53 54 56 57
E                    : 17
E1                   : 18 21 42 44 45
E2                   : 30 50 52
ELSE1                : 53
ESCRITURA            : 37
ESTATUTO             : 20 21
EXP                  : 31 41 43 44 46 62 64 65 66 67 68 71 73 74
F                    : 1 2
F2                   : 76
FACTOR               : 76
FUNCION              : 2
G_EXP                : 60 61 63
H_EXP                : 53 56 59 80
LECTURA              : 36
LLAMADA              : 34
LLAMADAF             : 85
P1                   : 13 16
P2                   : 14
PARAMS               : 10 16
PRINCIPAL            : 1
PROGRAMA             : 0
RETORNO              : 35
S_EXP                : 51 52
T                    : 72
TERMINO              : 72 77 78
TIPO                 : 5 13
TIPO_FUNCION         : 10
T_EXP                : 58 59 61
V1                   : 4 8
V2                   : 5 6
V3                   : 5 47 48
V4                   : 10
VARIABLE             : 5 6 41 48 49 84
VARS                 : 1 11
agregarFunc          : 10
agregarPilaOp        : 41 84
agregarVarLista      : 5 6 13
agregarVariables     : 5 10
agregarWhile         : 56
borrarListaVar       : 4 8 10
crearFuncGlobal      : 1
crearFuncMain        : 29
empty                : 3 7 9 12 15 19 32 55 69 75 79
gotoElse             : 54
gotoIf               : 53 56
meterBool            : 
meterFondoFalso      : 80
meterIgual           : 
meterMultDiv         : 
meterOperador        : 41 63 64 65 66 67 68 73 74 77 78
meterSumaResta       : 
popBool              : 62
popIgual             : 41
popMultDiv           : 76
popSumaResta         : 72
printFunciones       : 
printTodo            : 1
quitarFondoFalso     : 80
terminarGoto         : 53
terminarWhile        : 56

Parsing method: LALR

state 0

    (0) S' -> . PROGRAMA
    (1) PROGRAMA -> . crearFuncGlobal PROGRAM NAME SEMICOLON VARS F PRINCIPAL printTodo
    (104) crearFuncGlobal -> .

    PROGRAM         reduce using rule 104 (crearFuncGlobal -> .)

    PROGRAMA                       shift and go to state 1
    crearFuncGlobal                shift and go to state 2

state 1

    (0) S' -> PROGRAMA .



state 2

    (1) PROGRAMA -> crearFuncGlobal . PROGRAM NAME SEMICOLON VARS F PRINCIPAL printTodo

    PROGRAM         shift and go to state 3


state 3

    (1) PROGRAMA -> crearFuncGlobal PROGRAM . NAME SEMICOLON VARS F PRINCIPAL printTodo

    NAME            shift and go to state 4


state 4

    (1) PROGRAMA -> crearFuncGlobal PROGRAM NAME . SEMICOLON VARS F PRINCIPAL printTodo

    SEMICOLON       shift and go to state 5


state 5

    (1) PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON . VARS F PRINCIPAL printTodo
    (4) VARS -> . borrarListaVar VAR V1
    (111) borrarListaVar -> .

    VAR             reduce using rule 111 (borrarListaVar -> .)

    VARS                           shift and go to state 6
    borrarListaVar                 shift and go to state 7

state 6

    (1) PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON VARS . F PRINCIPAL printTodo
    (2) F -> . FUNCION F
    (3) F -> . empty
    (10) FUNCION -> . FUNC TIPO_FUNCION NAME agregarFunc LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO
    (86) empty -> .

    FUNC            shift and go to state 11
    MAIN            reduce using rule 86 (empty -> .)

    F                              shift and go to state 8
    FUNCION                        shift and go to state 9
    empty                          shift and go to state 10

state 7

    (4) VARS -> borrarListaVar . VAR V1

    VAR             shift and go to state 12


state 8

    (1) PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON VARS F . PRINCIPAL printTodo
    (29) PRINCIPAL -> . MAIN LPAREN crearFuncMain RPAREN CUERPO

    MAIN            shift and go to state 14

    PRINCIPAL                      shift and go to state 13

state 9

    (2) F -> FUNCION . F
    (2) F -> . FUNCION F
    (3) F -> . empty
    (10) FUNCION -> . FUNC TIPO_FUNCION NAME agregarFunc LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO
    (86) empty -> .

    FUNC            shift and go to state 11
    MAIN            reduce using rule 86 (empty -> .)

    FUNCION                        shift and go to state 9
    F                              shift and go to state 15
    empty                          shift and go to state 10

state 10

    (3) F -> empty .

    MAIN            reduce using rule 3 (F -> empty .)


state 11

    (10) FUNCION -> FUNC . TIPO_FUNCION NAME agregarFunc LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO
    (25) TIPO_FUNCION -> . INT
    (26) TIPO_FUNCION -> . FLOAT
    (27) TIPO_FUNCION -> . CHAR
    (28) TIPO_FUNCION -> . VOID

    INT             shift and go to state 17
    FLOAT           shift and go to state 18
    CHAR            shift and go to state 19
    VOID            shift and go to state 20

    TIPO_FUNCION                   shift and go to state 16

state 12

    (4) VARS -> borrarListaVar VAR . V1
    (5) V1 -> . TIPO VARIABLE agregarVarLista V2 SEMICOLON agregarVariables V3
    (22) TIPO -> . INT
    (23) TIPO -> . FLOAT
    (24) TIPO -> . CHAR

    INT             shift and go to state 23
    FLOAT           shift and go to state 24
    CHAR            shift and go to state 25

    V1                             shift and go to state 21
    TIPO                           shift and go to state 22

state 13

    (1) PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON VARS F PRINCIPAL . printTodo
    (109) printTodo -> .

    $end            reduce using rule 109 (printTodo -> .)

    printTodo                      shift and go to state 26

state 14

    (29) PRINCIPAL -> MAIN . LPAREN crearFuncMain RPAREN CUERPO

    LPAREN          shift and go to state 27


state 15

    (2) F -> FUNCION F .

    MAIN            reduce using rule 2 (F -> FUNCION F .)


state 16

    (10) FUNCION -> FUNC TIPO_FUNCION . NAME agregarFunc LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO

    NAME            shift and go to state 28


state 17

    (25) TIPO_FUNCION -> INT .

    NAME            reduce using rule 25 (TIPO_FUNCION -> INT .)


state 18

    (26) TIPO_FUNCION -> FLOAT .

    NAME            reduce using rule 26 (TIPO_FUNCION -> FLOAT .)


state 19

    (27) TIPO_FUNCION -> CHAR .

    NAME            reduce using rule 27 (TIPO_FUNCION -> CHAR .)


state 20

    (28) TIPO_FUNCION -> VOID .

    NAME            reduce using rule 28 (TIPO_FUNCION -> VOID .)


state 21

    (4) VARS -> borrarListaVar VAR V1 .

    FUNC            reduce using rule 4 (VARS -> borrarListaVar VAR V1 .)
    MAIN            reduce using rule 4 (VARS -> borrarListaVar VAR V1 .)
    LBRACKET        reduce using rule 4 (VARS -> borrarListaVar VAR V1 .)


state 22

    (5) V1 -> TIPO . VARIABLE agregarVarLista V2 SEMICOLON agregarVariables V3
    (30) VARIABLE -> . NAME E2

    NAME            shift and go to state 30

    VARIABLE                       shift and go to state 29

state 23

    (22) TIPO -> INT .

    NAME            reduce using rule 22 (TIPO -> INT .)


state 24

    (23) TIPO -> FLOAT .

    NAME            reduce using rule 23 (TIPO -> FLOAT .)


state 25

    (24) TIPO -> CHAR .

    NAME            reduce using rule 24 (TIPO -> CHAR .)


state 26

    (1) PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON VARS F PRINCIPAL printTodo .

    $end            reduce using rule 1 (PROGRAMA -> crearFuncGlobal PROGRAM NAME SEMICOLON VARS F PRINCIPAL printTodo .)


state 27

    (29) PRINCIPAL -> MAIN LPAREN . crearFuncMain RPAREN CUERPO
    (105) crearFuncMain -> .

    RPAREN          reduce using rule 105 (crearFuncMain -> .)

    crearFuncMain                  shift and go to state 31

state 28

    (10) FUNCION -> FUNC TIPO_FUNCION NAME . agregarFunc LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO
    (106) agregarFunc -> .

    LPAREN          reduce using rule 106 (agregarFunc -> .)

    agregarFunc                    shift and go to state 32

state 29

    (5) V1 -> TIPO VARIABLE . agregarVarLista V2 SEMICOLON agregarVariables V3
    (110) agregarVarLista -> .

    COMMA           reduce using rule 110 (agregarVarLista -> .)
    SEMICOLON       reduce using rule 110 (agregarVarLista -> .)

    agregarVarLista                shift and go to state 33

state 30

    (30) VARIABLE -> NAME . E2
    (31) E2 -> . LSBRACKET EXP RSBRACKET
    (32) E2 -> . empty
    (51) E2 -> . S_EXP
    (52) E2 -> . S_EXP COMMA E2
    (86) empty -> .
    (70) S_EXP -> . C_STRING
    (71) S_EXP -> . EXP
    (72) EXP -> . TERMINO T popSumaResta
    (76) TERMINO -> . FACTOR F2 popMultDiv
    (80) FACTOR -> . LPAREN meterFondoFalso H_EXP RPAREN quitarFondoFalso
    (81) FACTOR -> . C_INT
    (82) FACTOR -> . C_FLOAT
    (83) FACTOR -> . C_CHAR
    (84) FACTOR -> . VARIABLE agregarPilaOp
    (85) FACTOR -> . LLAMADAF
    (30) VARIABLE -> . NAME E2
    (45) LLAMADAF -> . NAME LPAREN E1 RPAREN

    LSBRACKET       shift and go to state 36
    COMMA           reduce using rule 86 (empty -> .)
    SEMICOLON       reduce using rule 86 (empty -> .)
    DIVIDE          reduce using rule 86 (empty -> .)
    MULTIPLY        reduce using rule 86 (empty -> .)
    PLUS            reduce using rule 86 (empty -> .)
    MINUS           reduce using rule 86 (empty -> .)
    FUNC            reduce using rule 86 (empty -> .)
    MAIN            reduce using rule 86 (empty -> .)
    LBRACKET        reduce using rule 86 (empty -> .)
    RPAREN          reduce using rule 86 (empty -> .)
    C_STRING        shift and go to state 40
    LPAREN          shift and go to state 43
    C_INT           shift and go to state 44
    C_FLOAT         shift and go to state 45
    C_CHAR          shift and go to state 46
    NAME            shift and go to state 34

    E2                             shift and go to state 35
    EXP                            shift and go to state 37
    empty                          shift and go to state 38
    S_EXP                          shift and go to state 39
    TERMINO                        shift and go to state 41
    FACTOR                         shift and go to state 42
    VARIABLE                       shift and go to state 47
    LLAMADAF                       shift and go to state 48

state 31

    (29) PRINCIPAL -> MAIN LPAREN crearFuncMain . RPAREN CUERPO

    RPAREN          shift and go to state 49


state 32

    (10) FUNCION -> FUNC TIPO_FUNCION NAME agregarFunc . LPAREN borrarListaVar PARAMS agregarVariables RPAREN V4 CUERPO

    LPAREN          shift and go to state 50


state 33

    (5) V1 -> TIPO VARIABLE agregarVarLista . V2 SEMICOLON agregarVariables V3
    (6) V2 -> . COMMA VARIABLE agregarVarLista V2
    (7) V2 -> . empty
    (86) empty -> .

    COMMA           shift and go to state 52
    SEMICOLON       reduce using rule 86 (empty -> .)

    V2                             shift and go to state 51
    empty                          shift and go to state 53

state 34

    (30) VARIABLE -> NAME . E2
    (45) LLAMADAF -> NAME . LPAREN E1 RPAREN
    (31) E2 -> . LSBRACKET EXP RSBRACKET
    (32) E2 -> . empty
    (51) E2 -> . S_EXP
    (52) E2 -> . S_EXP COMMA E2
    (86) empty -> .
    (70) S_EXP -> . C_STRING
    (71) S_EXP -> . EXP
    (72) EXP -> . TERMINO T popSumaResta
    (76) TERMINO -> . FACTOR F2 popMultDiv
    (80) FACTOR -> . LPAREN meterFondoFalso H_EXP RPAREN quitarFondoFalso
    (81) FACTOR -> . C_INT
    (82) FACTOR -> . C_FLOAT
    (83) FACTOR -> . C_CHAR
    (84) FACTOR -> . VARIABLE agregarPilaOp
    (85) FACTOR -> . LLAMADAF
    (30) VARIABLE -> . NAME E2
    (45) LLAMADAF -> . NAME LPAREN E1 RPAREN

    LPAREN          shift and go to state 54
    LSBRACKET       shift and go to state 36
    COMMA           reduce using rule 86 (empty -> .)
    SEMICOLON       reduce using rule 86 (empty -> .)
    DIVIDE          reduce using rule 86 (empty -> .)
    MULTIPLY        reduce using rule 86 (empty -> .)
    PLUS            reduce using rule 86 (empty -> .)
    MINUS           reduce using rule 86 (empty -> .)
    FUNC            reduce using rule 86 (empty -> .)
    MAIN            reduce using rule 86 (empty -> .)
    LBRACKET        reduce using rule 86 (empty -> .)
    RPAREN          reduce using rule 86 (empty -> .)
    RSBRACKET       reduce using rule 86 (empty -> .)
    EQUALS          reduce using rule 86 (empty -> .)
    RBRACKET        reduce using rule 86 (empty -> .)
    GREATER_OR_EQUAL reduce using rule 86 (empty -> .)
    LESS_OR_EQUAL   reduce using rule 86 (empty -> .)
    GREATER_THAN    reduce using rule 86 (empty -> .)
    LESS_THAN       reduce using rule 86 (empty -> .)
    IS_EQUAL        reduce using rule 86 (empty -> .)
    NOT_EQUAL       reduce using rule 86 (empty -> .)
    AND             reduce using rule 86 (empty -> .)
    OR              reduce using rule 86 (empty -> .)
    C_STRING        shift and go to state 40
    C_INT           shift and go to state 44
    C_FLOAT         shift and go to state 45
    C_CHAR          shift and go to state 46
    NAME            shift and go to state 34

    E2                             shift and go to state 35
    EXP                            shift and go to state 37
    empty                          shift and go to state 38
    S_EXP                          shift and go to state 39
    TERMINO                        shift and go to state 41
    FACTOR                         shift and go to state 42
    VARIABLE                       shift and go to state 47
    LLAMADAF                       shift and go to state 48

state 35

    (30) VARIABLE -> NAME E2 .

    COMMA           reduce using rule 30 (VARIABLE -> NAME E2 .)
    SEMICOLON       reduce using rule 30 (VARIABLE -> NAME E2 .)
    DIVIDE          reduce using rule 30 (VARIABLE -> NAME E2 .)
    MULTIPLY        reduce using rule 30 (VARIABLE -> NAME E2 .)
    PLUS            reduce using rule 30 (VARIABLE -> NAME E2 .)
    MINUS           reduce using rule 30 (VARIABLE -> NAME E2 .)
    FUNC            reduce using rule 30 (VARIABLE -> NAME E2 .)
    MAIN            reduce using rule 30 (VARIABLE -> NAME E2 .)
    LBRACKET        reduce using rule 30 (VARIABLE -> NAME E2 .)
    RPAREN          reduce using rule 30 (VARIABLE -> NAME E2 .)
    RSBRACKET       reduce using rule 30 (VARIABLE -> NAME E2 .)
    EQUALS          reduce using rule 30 (VARIABLE -> NAME E2 .)
    RBRACKET        reduce using rule 30 (VARIABLE -> NAME E2 .)
    GREATER_OR_EQUAL reduce using rule 30 (VARIABLE -> NAME E2 .)
    LESS_OR_EQUAL   reduce using rule 30 (VARIABLE -> NAME E2 .)
    GREATER_THAN    reduce using rule 30 (VARIABLE -> NAME E2 .)
    LESS_THAN       reduce using rule 30 (VARIABLE -> NAME E2 .)
    IS_EQUAL        reduce using rule 30 (VARIABLE -> NAME E2 .)
    NOT_EQUAL       reduce using rule 30 (VARIABLE -> NAME E2 .)
    AND             reduce using rule 30 (VARIABLE -> NAME E2 .)
    OR              reduce using rule 30 (VARIABLE -> NAME E2 .)


state 36

    (31) E2 -> LSBRACKET . EXP RSBRACKET
    (72) EXP -> . TERMINO T popSumaResta
    (76) TERMINO -> . FACTOR F2 popMultDiv
    (80) FACTOR -> . LPAREN meterFondoFalso H_EXP RPAREN quitarFondoFalso
    (81) FACTOR -> . C_INT
    (82) FACTOR -> . C_FLOAT
    (83) FACTOR -> . C_CHAR
    (84) FACTOR -> . VARIABLE agregarPilaOp
    (85) FACTOR -> . LLAMADAF
    (30) VARIABLE -> . NAME E2
    (45) LLAMADAF -> . NAME LPAREN E1 RPAREN

    LPAREN          shift and go to state 43
    C_INT           shift and go to state 44
    C_FLOAT         shift and go to state 45
    C_CHAR          shift and go to state 46
    NAME            shift and go to state 34

    EXP                            shift and go to state 55
    TERMINO                        shift and go to state 41
    FACTOR                         shift and go to state 42
    VARIABLE                       shift and go to state 47
    LLAMADAF                       shift and go to state 48

state 37

    (71) S_EXP -> EXP .

    COMMA           reduce using rule 71 (S_EXP -> EXP .)
    SEMICOLON       reduce using rule 71 (S_EXP -> EXP .)
    DIVIDE          reduce using rule 71 (S_EXP -> EXP .)
    MULTIPLY        reduce using rule 71 (S_EXP -> EXP .)
    PLUS            reduce using rule 71 (S_EXP -> EXP .)
    MINUS           reduce using rule 71 (S_EXP -> EXP .)
    FUNC            reduce using rule 71 (S_EXP -> EXP .)
    MAIN            reduce using rule 71 (S_EXP -> EXP .)
    LBRACKET        reduce using rule 71 (S_EXP -> EXP .)
    RPAREN          reduce using rule 71 (S_EXP -> EXP .)
    RSBRACKET       reduce using rule 71 (S_EXP -> EXP .)
    EQUALS          reduce using rule 71 (S_EXP -> EXP .)
    RBRACKET        reduce using rule 71 (S_EXP -> EXP .)
    GREATER_OR_EQUAL reduce using rule 71 (S_EXP -> EXP .)
    LESS_OR_EQUAL   reduce using rule 71 (S_EXP -> EXP .)
    GREATER_THAN    reduce using rule 71 (S_EXP -> EXP .)
    LESS_THAN       reduce using rule 71 (S_EXP -> EXP .)
    IS_EQUAL        reduce using rule 71 (S_EXP -> EXP .)
    NOT_EQUAL       reduce using rule 71 (S_EXP -> EXP .)
    AND             reduce using rule 71 (S_EXP -> EXP .)
    OR              reduce using rule 71 (S_EXP -> EXP .)


state 38

    (32) E2 -> empty .

    COMMA           reduce using rule 32 (E2 -> empty .)
    SEMICOLON       reduce using rule 32 (E2 -> empty .)
    DIVIDE          reduce using rule 32 (E2 -> empty .)
    MULTIPLY        reduce using rule 32 (E2 -> empty .)
    PLUS            reduce using rule 32 (E2 -> empty .)
    MINUS           reduce using rule 32 (E2 -> empty .)
    FUNC            reduce using rule 32 (E2 -> empty .)
    MAIN            reduce using rule 32 (E2 -> empty .)
    LBRACKET        reduce using rule 32 (E2 -> empty .)
    RPAREN          reduce using rule 32 (E2 -> empty .)
    RSBRACKET       reduce using rule 32 (E2 -> empty .)
    EQUALS          reduce using rule 32 (E2 -> empty .)
    RBRACKET        reduce using rule 32 (E2 -> empty .)
    GREATER_OR_EQUAL reduce using rule 32 (E2 -> empty .)
    LESS_OR_EQUAL   reduce using rule 32 (E2 -> empty .)
    GREATER_THAN    reduce using rule 32 (E2 -> empty .)
    LESS_THAN       reduce using rule 32 (E2 -> empty .)
    IS_EQUAL        reduce using rule 32 (E2 -> empty .)
    NOT_EQUAL       reduce using rule 32 (E2 -> empty .)
    AND             reduce using rule 32 (E2 -> empty .)
    OR              reduce using rule 32 (E2 -> empty .)


state 39

    (51) E2 -> S_EXP .
    (52) E2 -> S_EXP . COMMA E2

  ! shift/reduce conflict for COMMA resolved as shift
    SEMICOLON       reduce using rule 51 (E2 -> S_EXP .)
    DIVIDE          reduce using rule 51 (E2 -> S_EXP .)
    MULTIPLY        reduce using rule 51 (E2 -> S_EXP .)
    PLUS            reduce using rule 51 (E2 -> S_EXP .)
    MINUS           reduce using rule 51 (E2 -> S_EXP .)
    FUNC            reduce using rule 51 (E2 -> S_EXP .)
    MAIN            reduce using rule 51 (E2 -> S_EXP .)
    LBRACKET        reduce using rule 51 (E2 -> S_EXP .)
    RPAREN          reduce using rule 51 (E2 -> S_EXP .)
    RSBRACKET       reduce using rule 51 (E2 -> S_EXP .)
    EQUALS          reduce using rule 51 (E2 -> S_EXP .)
    RBRACKET        reduce using rule 51 (E2 -> S_EXP .)
    GREATER_OR_EQUAL reduce using rule 51 (E2 -> S_EXP .)
    LESS_OR_EQUAL   reduce using rule 51 (E2 -> S_EXP .)
    GREATER_THAN    reduce using rule 51 (E2 -> S_EXP .)
    LESS_THAN       reduce using rule 51 (E2 -> S_EXP .)
    IS_EQUAL        reduce using rule 51 (E2 -> S_EXP .)
    NOT_EQUAL       reduce using rule 51 (E2 -> S_EXP .)
    AND             reduce using rule 51 (E2 -> S_EXP .)
    OR              reduce using rule 51 (E2 -> S_EXP .)
    COMMA           shift and go to state 56

  ! COMMA           [ reduce using rule 51 (E2 -> S_EXP .) ]


state 40

    (70) S_EXP -> C_STRING .

    COMMA           reduce using rule 70 (S_EXP -> C_STRING .)
    SEMICOLON       reduce using rule 70 (S_EXP -> C_STRING .)
    DIVIDE          reduce using rule 70 (S_EXP -> C_STRING .)
    MULTIPLY        reduce using rule 70 (S_EXP -> C_STRING .)
    PLUS            reduce using rule 70 (S_EXP -> C_STRING .)
    MINUS           reduce using rule 70 (S_EXP -> C_STRING .)
    FUNC            reduce using rule 70 (S_EXP -> C_STRING .)
    MAIN            reduce using rule 70 (S_EXP -> C_STRING .)
    LBRACKET        reduce using rule 70 (S_EXP -> C_STRING .)
    RPAREN          reduce using rule 70 (S_EXP -> C_STRING .)
    RSBRACKET       reduce using rule 70 (S_EXP -> C_STRING .)
    EQUALS          reduce using rule 70 (S_EXP -> C_STRING .)
    RBRACKET        reduce using rule 70 (S_EXP -> C_STRING .)
    GREATER_OR_EQUAL reduce using rule 70 (S_EXP -> C_STRING .)
    LESS_OR_EQUAL   reduce using rule 70 (S_EXP -> C_STRING .)
    GREATER_THAN    reduce using rule 70 (S_EXP -> C_STRING .)
    LESS_THAN       reduce using rule 70 (S_EXP -> C_STRING .)
    IS_EQUAL        reduce using rule 70 (S_EXP -> C_STRING .)
    NOT_EQUAL       reduce using rule 70 (S_EXP -> C_STRING .)
    AND             reduce using rule 70 (S_EXP -> C_STRING .)
    OR              reduce using rule 70 (S_EXP -> C_STRING .)


state 41

    (72) EXP -> TERMINO . T popSumaResta
    (73) T -> . PLUS meterOperador EXP
    (74) T -> . MINUS meterOperador EXP
    (75) T -> . empty
    (86) empty -> .

  ! shift/reduce conflict for PLUS resolved as shift
  ! shift/reduce conflict for MINUS resolved as shift
    PLUS            shift and go to state 58
    MINUS           shift and go to state 59
    COMMA           reduce using rule 86 (empty -> .)
    SEMICOLON       reduce using rule 86 (empty -> .)
    DIVIDE          reduce using rule 86 (empty -> .)
    MULTIPLY        reduce using rule 86 (empty -> .)
    FUNC            reduce using rule 86 (empty -> .)
    MAIN            reduce using rule 86 (empty -> .)
    LBRACKET        reduce using rule 86 (empty -> .)
    RPAREN          reduce using rule 86 (empty -> .)
    RSBRACKET       reduce using rule 86 (empty -> .)
    EQUALS          reduce using rule 86 (empty -> .)
    RBRACKET        reduce using rule 86 (empty -> .)
    GREATER_OR_EQUAL reduce using rule 86 (empty -> .)
    LESS_OR_EQUAL   reduce using rule 86 (empty -> .)
    GREATER_THAN    reduce using rule 86 (empty -> .)
    LESS_THAN       reduce using rule 86 (empty -> .)
    IS_EQUAL        reduce using rule 86 (empty -> .)
    NOT_EQUAL       reduce using rule 86 (empty -> .)
    AND             reduce using rule 86 (empty -> .)
    OR              reduce using rule 86 (empty -> .)

  ! PLUS            [ reduce using rule 86 (empty -> .) ]
  ! MINUS           [ reduce using rule 86 (empty -> .) ]

    T                              shift and go to state 57
    empty                          shift and go to state 60

state 42

    (76) TERMINO -> FACTOR . F2 popMultDiv
    (77) F2 -> . DIVIDE meterOperador TERMINO
    (78) F2 -> . MULTIPLY meterOperador TERMINO
    (79) F2 -> . empty
    (86) empty -> .
